// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly with extra props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        aria-checked={true}
        aria-disabled={true}
        checked={true}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should render with default props 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky -clickable"
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container root size-18 theme-light color-sky -clickable"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;
